--- a/src/pages/settings/Settings.module.css
+++ b/src/pages/settings/Settings.module.css
@@ -242,3 +242,23 @@ table td {
     padding: 10px 0;
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
+
+.input-alert {
+    color: #ff0000;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+.under-construction-img {
+    width: 100%;
+    height: auto;
+    max-height: 400px;
+    object-fit: contain;
+}
+
+.warning-txt {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #2e7da9;
+    text-align: center;
+}
