updated database to have an agentAssigned field on the ticket collection to be able to populate agent names and pictures correctly on the ticket block.

--- a/src/components/TicketBlock.module.css
+++ b/src/components/TicketBlock.module.css
@@ -36,6 +36,11 @@ p {
     max-width: 120px;
 }
 
+.ticket-row .ticket-title {
+    min-width: 225px;
+    max-width: 225px;
+}
+
 .ticket-col {
     display: flex;
     flex-direction: column;
