users can now create users on the create user form.

--- a/src/pages/create_user/CreateUser.module.css
+++ b/src/pages/create_user/CreateUser.module.css
@@ -70,6 +70,10 @@
     font-weight: 400;
 }
 
-.username-inp {
+.disabled-inp {
     background-color: rgba(0, 0, 0, 0.1);
+}
+
+.req-inp {
+    border: 2px solid rgba(255, 0, 0, 0.6) !important;
 }
