--- a/src/pages/loginpage/LoginPage.module.css
+++ b/src/pages/loginpage/LoginPage.module.css
@@ -17,6 +17,10 @@
     align-items: center;
 }
 
+.txt-center {
+    text-align: center;
+}
+
 .form-wrapper {
     width: 75%;
     max-width: 700px;
@@ -47,7 +51,7 @@
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 25px;
+    gap: 18px;
     padding: 25px 30px;
 }
 
