added functionality to update department within ticket details.

--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -101,6 +101,14 @@
 .tkt-num-row {
     display: flex;
     flex: 1;
+    gap: 1rem;
+}
+
+.tkt-num-row select {
+    border: none;
+    background-color: #f1efef;
+    padding: 0;
+    font-size: 1rem;
 }
 
 .ticket-details-row > div:nth-child(2) {
