--- a/src/pages/ticket_details/TicketDetails.module.css
+++ b/src/pages/ticket_details/TicketDetails.module.css
@@ -1,7 +1,5 @@
 .main-container-row {
     display: flex;
-    height: 100%;
-    width: 100%;
     border-radius: 5px;
     background-color: #fafafa;
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -174,4 +172,40 @@
     box-shadow: 0 0 0 0;
     font-weight: 400;
     font-size: 0.9rem;
+}
+
+.ticket-params-row {
+    display: flex;
+    gap: 15px;
+    padding-top: 1rem;
+}
+
+.ticket-params-row p {
+    padding: 0 5px;
+    cursor: pointer;
+    transition: color 0.3s ease-in-out;
+}
+
+.ticket-params-row p:hover {
+    color: #6295af;
+}
+
+.active-tab {
+    font-weight: 600;
+    color: #2e7da9;
+    border-bottom: 1px solid #2e7da9;
+}
+
+.under-construction-img {
+    width: 100%;
+    height: auto;
+    max-height: 300px;
+    object-fit: contain;
+}
+
+.warning-txt {
+    font-size: 1.4rem;
+    font-weight: 600;
+    color: #2e7da9;
+    text-align: center;
 }
