--- a/src/pages/agent_dashboard/AgentDashboard.module.css
+++ b/src/pages/agent_dashboard/AgentDashboard.module.css
@@ -3,8 +3,9 @@
     flex-direction: column;
     /*gap: 5px;*/
     padding: 0;
-    height: calc(100vh - 190px);
+    flex: 1;
     overflow: auto;
+    border: 1px solid #e0e0e0;
 }
 
 .header-row:nth-child(1) {
@@ -152,7 +153,46 @@
     border-radius: 50%;
 }
 
+.tbl-banner {
+    display: flex;
+    align-items: center;
+    background-color: #0099ff;
+    padding: 8px 20px;
+    gap: 4rem;
+}
+.tbl-banner > div {
+    display: flex;
+}
 
+.tbl-banner > div:first-child {
+    flex: 1;
+    align-items: center;
+    gap: 2rem;
+}
+
+.tbl-banner > div:last-child {
+    gap: 2rem;
+}
+
+.tbl-banner-title {
+    font-size: 1rem;
+    font-weight: 600;
+    color: #fff;
+}
+
+.tbl-banner-bubble {
+    background-color: rgba(0,0,0,0.3);
+    padding: 8px 14px;
+    border-radius: 5px;
+    color: #fff;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
+.tbl-banner-bubble:hover {
+    background-color: rgba(0,0,0,0.5);
+
+}
 
 .tbl {
     width: 100%;
