added functionality to the column visibility checkboxes on the tickets table banner.

--- a/src/pages/agent_dashboard/AgentDashboard.module.css
+++ b/src/pages/agent_dashboard/AgentDashboard.module.css
@@ -4,7 +4,6 @@
     /*gap: 5px;*/
     padding: 0;
     flex: 1;
-    overflow: auto;
     border: 1px solid #e0e0e0;
 }
 
@@ -222,6 +221,9 @@
     height: 1.1rem;
 }
 
+.tbl-ctr {
+    overflow: auto;
+}
 .tbl {
     width: 100%;
     border-collapse: collapse;
